Clear started transitions overwritten by duration 0 transitions on the same property

This patch ensures that transitions on properties don't start if they're
specified with 0s duration but have non-zero duration in prior transition
layers.

Example: "transition: all 1s, left 0s" should not start transitions on left.

BUG=695875

Review-Url: https://codereview.chromium.org/2726923005
Cr-Commit-Position: refs/heads/master@{#454200}

Former-commit-id: 0c248cbece92af7bedfba65d35ac875153206f85